  [lgraf]

- LDAP import: groupid may be in 'cn' or 'fullname' attribute.
  Handle both cases gracefully.
  [lgraf]

- Updated i18n-build with the option to build only one subpackage.
  [lknoepfel]

- Fixed unicode encoding bug in search for autocomplete of ContactsVocabulary.
  [lknoepfel]

- Disabled illogical actions in template dossier.
  [lknoepfel]

3.1.1 (2013-10-23)
------------------

- Fixed CleanupReferencePrefixMapping upgradestep
  (works now for reference to no longer existing objects):
  [phgross]

3.1 (2013-10-23)
----------------

- Update reference prefix manager to the new version of adapters.
  [lknoepfel]

- Fixed client setup: use system user instead of hardcoded username.
  [lknoepfel]

- Fixed redirect when creating a subtask.
  [phgross]

- Integrate ftw.zipexport.
  [lknoepfel]

- Reworked forwarding refuse and reassign functionality.
  [phgross]

- Reworked inbox tabs.
  [phgross]

- Activate reporting actions (dossier and tasks) for every user.
  [phgross]

- Dossiercover: Implements breadcrumb cropping and adjust fonz size.
  [phgross]

- Dropped inbox_group agency for tasks in a oneclient setup.
  [phgross]

- Task workflow: Documents inside a task, aren't editable when the dossier is closed.
  [phgross]

- Reworked document_author resolution and displaying value in listings.
  [phgross]

- Fixed permissions problems when copying dossiers.
  [lgraf]

- LDAP import: Use the respective property from LDAPUserFolder to determine which is the
  UID attribute.
  [lgraf]

- LDAP util: Make determining multi-valuedness of attributes more robust
  in case of broken LDAP schemas.
  [lgraf]

- LDAP util: Get user object classes from LDAPUserFolder instead of hardcoding them.
  [lgraf]

- Added modify deadline form and functionality.
  [phgross]

- Removed client prefixes in single client setups.
  [lknoepfel]

- Use ftw.builder instead of our own builder implementation.
  [phgross]


3.0.1 (2013-10-21)
------------------
