@@ -4,6 +4,7 @@
     xmlns:grok="http://namespaces.zope.org/grok"
     xmlns:i18n="http://namespaces.zope.org/i18n"
     xmlns:plone="http://namespaces.plone.org/plone"
+    xmlns:browser="http://namespaces.zope.org/browser"
     i18n_domain="opengever.repository">
 
     <!-- Include custom permissions -->
@@ -27,5 +28,18 @@
         directory="profiles/default"
         provides="Products.GenericSetup.interfaces.EXTENSION"
         />
+
+    <browser:page
+        name="referenceprefix_manager"
+        for="opengever.repository.interfaces.IRepositoryFolder"
+        class=".browser.referenceprefix_manager.ReferencePrefixManager"
+        template="browser/referenceprefix_manager_templates/referenceprefixmanager.pt"
+        permission="opengever.repository.UnlockReferencePrefix" />
+    <browser:page
+        name="referenceprefix_manager"
+        for="opengever.repository.repositoryroot.IRepositoryRoot"
+        class=".browser.referenceprefix_manager.ReferencePrefixManager"
+        template="browser/referenceprefix_manager_templates/referenceprefixmanager.pt"
+        permission="opengever.repository.UnlockReferencePrefix" />
 
 </configure>
